<resources>
    <string name="app_name">BMIApplication</string>
    <string name="bmi_calculator">     BMI CALCULATOR    </string>
    <string name="enter_weight_in_kg">       Enter Weight in KG   </string>
    <string name="enter_height_in_cm">       Enter Height in CM   </string>
    <string name="calculate">CALCULATE</string>
    <string name="bmi_value_is">BMI Value is -</string>
    <string name="First_Name">first_name</string>
    <string name="about_app">About App</string>
    <string name="exit">Exit</string>
    <string name="do_you_want_to_exit">Do You Want to Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="see_bmi_chart">See BMI Chart</string>
    <string name="please_check_your_bmi_status">Please Check Your BMI Status</string>
    <string name="this_status_according_your_bmi_value">This Status According Your BMI Value</string>
    <string name="back">Back</string>
    <string name="please_see_your_status_according_bmi_value">Please See Your Status According BMI Value</string>
    <string name="hiii_my_name_is_ankit_kumar_n_i_develope_this_application_for_calculate_body_mass_index_n_basically_bmi_depend_on_your_height_and_weight_this_calculator_calculate_your_height_and_weigth_n_and_this_application_people_helps_to_know_body_mass_index_according_weight_and_height_n_n_n_version_1_0_beta_n_date_10_03_2023_n_n_n_n_n_n_developed_by_android_developer_nkit_kumar">Hiii My Name is Ankit Kumar \n I Develop This Application For Calculate Body Mass Index \n Basically BMI Depend on Your Height and Weight. This Calculator calculate Your Height and Weigth.\n And This Application People Helps to Know Body Mass Index According Weight and Height \n\n\n version -1.0 Beta \n Date - 10/03/2023 \n\n\n\n\n\n DEVELOPED BY Android Developer @nkit Kumar</string>
    <string name="confirmation">Confirmation</string>
    <string name="message">Message:</string>
    <string name="Yesbtn">Yes</string>
    <string name="nobtn">No</string>
    <string name="bmi_chart">BMI CHART</string>
    <string name="bmi_status">BMI Status</string>
    <string name="bmi_formula"> BMI Formula </string>
    <string name="call_a_number">Call A Number</string>
    <string name="dail_a_number">Dail A Number</string>
    <string name="e_mail">E-Mail</string>
    <string name="enter_a_number">Enter A Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="contect_us">contect_us</string>
    <string name="see_video_know_bmi">See_Video_Know_BMI</string>
    <string name="gether_online_about_bmi">Gether_Online_About_BMI</string>
    <string name="enter_a_number_Dial">Enter A Number</string>
    <string name="call">Call</string>
    <string name="never_ask_again">Never Ask Again</string>
    <string name="tell_other_what_you_think_about_this_app">Tell other what you think about this app</string>
    <string name="rate_us">Rate_Us</string>
    <string name="rating_later">Rating_Later</string>
    <string name="submit">Submit</string>
    <string name="age_years">Age (Years)</string>
    <string name="_22">22</string>
    <string name="height">Height</string>
    <string name="ft">Ft</string>
    <string name="_5">5</string>
    <string name="in">in</string>
    <string name="_5one">5</string>
    <string name="_11">11</string>
    <string name="bmi_value">BMI VALUE</string>
</resources>