<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="140dp"
            android:layout_margin="15dp"
            app:cardElevation="5dp"
            android:elevation="12dp"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:text="@string/age_years"
                    android:textSize="18sp"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:ems="3"
                    android:gravity="center"
                    android:hint="@string/_22"
                    android:inputType="number"
                    android:textSize="28sp"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    android:autofillHints="" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="140dp"
            android:layout_margin="15dp"
            app:cardElevation="5dp"
            android:elevation="12dp"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:text="@string/age_years"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:ems="3"
                    android:gravity="center"
                    android:hint="@string/_22"
                    android:textSize="28sp"
                    android:inputType="number"
                    android:autofillHints="" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp"
        android:elevation="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/height"
            android:textColor="#4AD319"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">



            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:text="@string/ft"
                android:gravity="center"/>

            <EditText
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18sp"
                android:hint="@string/_5"
                android:id="@+id/edFeet"
                android:inputType="number"
                android:ems="4"
                android:autofillHints=""
                tools:ignore="VisualLintBounds" />


            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:text="@string/in"
                android:gravity="center"/>

            <EditText
                android:id="@+id/edInch"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:ems="4"
                android:gravity="center"
                android:hint="@string/_11"
                android:textSize="18sp"
                android:autofillHints=""
                android:inputType="number"
                tools:ignore="VisualLintBounds" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="15dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="12dp"
        android:elevation="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_value"/>






    </androidx.cardview.widget.CardView>

</LinearLayout>